Refined formatting and display options for chart and sheet music notation on results page. Still some formatting issues with spacing on stave not properly corresponding on note duration.

--- a/static/main.css
+++ b/static/main.css
@@ -141,6 +141,10 @@ label {
     margin-right: 50px;
 }
 
+#note2 {
+    margin-bottom: 50px;
+}
+
 #note3 {
     margin-left: 50px;
 }
@@ -159,7 +163,13 @@ label {
     width: 40px;
 }
 
+.audio {
+    margin-top: 50px;
+}
 
+canvas {
+    margin-bottom: 100px;
+}
 /*.login-form {
     position: relative;
 }*/
